--- a/Architect a data platform in Azure/1 .Data storage options.md
+++ b/Architect a data platform in Azure/1 .Data storage options.md
@@ -9,4 +9,5 @@
       - **Archive storage tier**: for data that are rarely accessed and stored for at least **180 days** with flexible latency requirements.
 - [Comparison between Azure data storage and on-premises storage](https://docs.microsoft.com/en-au/learn/modules/intro-to-data-in-azure/4-comparison-azure-and-on-prem-storage)
 - [Knowledge check](https://docs.microsoft.com/en-au/learn/modules/intro-to-data-in-azure/5-knowledge-check)
+  - ![](2019-11-16-21-34-40.png)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/intro-to-data-in-azure/6-summary)    
